--- a/Frontend/public/index.html
+++ b/Frontend/public/index.html
@@ -28,6 +28,18 @@
 
       <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5228658089159350"
         crossorigin="anonymous"></script>
+
+
+
+        <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-YG5RWFXRK3"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-YG5RWFXRK3');
+</script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
